smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/multiple-required-exclamations.smithy
// Parse error at line 5, column 17 near `!\n`: Expected a valid identifier character, but found '!'
namespace smithy.example

structure Foo {
    bar: String!!
}
